# BaseDetect

./: .gitignore  README.md  setup.bash
base_detect/: CMakeLists.txt  base_detect.cpp  package.xml
base_detect/include/: base_detect.h
base_detect/src/: base_detect.cpp  listener.cpp  talker.cpp
bytetrack/: CMakeLists.txt
bytetrack/include/: kalmanFilter.h
bytetrack/src/: BYTETracker.cpp  testBytetrack.cpp
test/: CMakeLists.txt  det_yolov5.cpp  det_yolov6.cpp  det_yolov7.cpp  det_yolox.cpp  new_test.cpp  test_base.cpp  track_bytetrack_yolov5.cpp  track_bytetrack_yolov6.cpp  track_bytetrack_yolov7.cpp  track_bytetrack_yolox.cpp
test/src/: new_test  new_test.cpp  test.cpp
yolov5/: CMakeLists.txt  README.md  yololayer.cu  yolov5.cpp  yolov5.h
yolov5/include/: yolov5.h
yolov5/src/: yolov5.cpp
yolov6/: CMakeLists.txt  yolov6.cpp  yolov6.h
yolox/: CMakeLists.txt  yolox.cpp  yolox.h
yolox/include/: yolox.h
yolox/include/bytetrack/: dataType.h
yolox/src/: test.cpp  yolox.cpp
